bug scrollbar

--- a/src/public/css/style-index.css
+++ b/src/public/css/style-index.css
@@ -11,11 +11,13 @@
 #main-container h1{
     font-weight: 800;
     font-size: 4.0rem;
+    overflow: hidden;
 }
 
 #main-container h3{
     font-weight: 600;
     font-size: 1.75rem;
+    overflow: hidden;
 }
 
 #main-container {
@@ -72,6 +74,7 @@
 
 h1, h3, p{
     text-shadow: 1px;
+    overflow: hidden;
 }
 
 #container-about-2 img, #container-about img{
