--- a/src/public/css/style-resultado-consulta.css
+++ b/src/public/css/style-resultado-consulta.css
@@ -6,4 +6,6 @@ main{
 .container-sm{
   background-color: #141345 !important;
   border-radius: 10px;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
